test/files/neg/t10729/Switch.scala
import annotation.switch

class switch {
  def test(x: Int) = (x: @switch) match {
    case 1 | 2 | 3 => ()
  }
}